# deploy-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.toml  main.tf  pyproject.toml  setup.sh  variables.tf
app/: api.py
etl/: extract.py  main.py  transform.py
