[tool.poetry]
name = "deploy-api"
version = "0.0.1"
description = ""
authors = [""]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.0"
loguru = "^0.7.2"
toml = "^0.10.2"
requests = "^2.31.0"
bs4 = "^0.0.1"
parse = "^1.19.1"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
html5lib = "^1.1"
pyarrow = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
